<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_errorIcon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_error_no_server_connection"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_errorImage"
        android:layout_width="100dp"
        android:layout_height="167dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/error_no_server_connection"
        app:layout_constraintEnd_toEndOf="@+id/img_errorIcon"
        app:layout_constraintStart_toStartOf="@+id/img_errorIcon"
        app:layout_constraintTop_toBottomOf="@+id/img_errorIcon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_titleError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/not_connected_to_the_server"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_errorImage"
        app:layout_constraintStart_toStartOf="@+id/img_errorImage"
        app:layout_constraintTop_toBottomOf="@+id/img_errorImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_trackingCodeLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/tracking_code_lable"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/mtv_titleError"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mtv_trackingCodeValue"
        app:layout_constraintTop_toBottomOf="@+id/mtv_titleError" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_trackingCodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:text="@string/tracking_code_value"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mtv_trackingCodeLable"
        app:layout_constraintEnd_toStartOf="@+id/mtv_trackingCodeLable"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/mtv_titleError" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_titleDescriptionError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="تغییرات جدید : "
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/mtv_trackingCodeLable" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/mbtn_firstButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/mtv_titleDescriptionError">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_descriptionError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/not_support_error_description"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mbtn_firstButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:background="@drawable/border_corner12_bg_blue"
        android:gravity="center"
        android:text="@string/review_again"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toEndOf="@+id/mtv_secondButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_secondButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/support_call"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mbtn_firstButton"
        app:layout_constraintEnd_toStartOf="@+id/mbtn_firstButton"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>